fix: change bg color on dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--hover-grey);
 }
 
 code {
